src/parser.output
Terminals which are not used

   TOKEN_MINUS
   TOKEN_MUL
   TOKEN_SEMI
   TOKEN_ERROR
   TOKEN_AUTO
   TOKEN_WHILE
   TOKEN_INEQ
   TOKEN_COMMENT


Grammar

    0 $accept: program $end

    1 program: decl_list TOKEN_EOF
    2        | TOKEN_EOF

    3 decl_list: decl decl_list
    4          | decl

    5 decl: var_decl
    6     | func_decl

    7 var_decl: ident TOKEN_DEFINE val_type init expr TOKEN_SEMICOLON
    8         | ident TOKEN_DEFINE val_type TOKEN_SEMICOLON
    9         | ident TOKEN_DEFINE array_type init TOKEN_LBRACE array_init TOKEN_RBRACE TOKEN_SEMICOLON
   10         | ident TOKEN_DEFINE array_type TOKEN_SEMICOLON

   11 func_decl: ident TOKEN_DEFINE TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
   12          | ident TOKEN_DEFINE TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN init TOKEN_LBRACE stmt_list TOKEN_RBRACE

   13 stmt_list: stmt stmt_next
   14          | /* empty */

   15 stmt_next: stmt stmt_next
   16          | /* empty */

   17 stmt: simp_stmt
   18     | cmpd_stmt

   19 simp_stmt: TOKEN_LBRACE stmt_list TOKEN_RBRACE
   20          | var_decl
   21          | TOKEN_RETURN expr TOKEN_SEMICOLON
   22          | TOKEN_RETURN TOKEN_SEMICOLON
   23          | TOKEN_PRINT opt_expr_list TOKEN_SEMICOLON
   24          | inc_or_dec TOKEN_SEMICOLON
   25          | expr_assign TOKEN_SEMICOLON
   26          | func_call TOKEN_SEMICOLON

   27 cmpd_stmt: if_expr stmt
   28          | if_expr if_dangle TOKEN_ELSE stmt
   29          | for_stmt reg_end

   30 if_dangle: if_expr if_dangle TOKEN_ELSE if_dangle
   31          | for_stmt dangle_end
   32          | simp_stmt

   33 if_expr: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN

   34 for_stmt: TOKEN_FOR for_cond

   35 for_cond: TOKEN_LPAREN for_expr TOKEN_SEMICOLON for_expr TOKEN_SEMICOLON for_expr TOKEN_RPAREN

   36 for_expr: expr
   37         | /* empty */

   38 dangle_end: TOKEN_SEMICOLON
   39           | if_dangle

   40 reg_end: TOKEN_SEMICOLON
   41        | stmt

   42 func_call: ident_expr TOKEN_LPAREN opt_expr_list TOKEN_RPAREN

   43 array_init: TOKEN_LBRACE expr_list TOKEN_RBRACE array_init_next
   44           | expr_list

   45 array_init_next: TOKEN_COMMA TOKEN_LBRACE expr_list TOKEN_RBRACE array_init_next
   46                | /* empty */

   47 expr_list: expr expr_next

   48 opt_expr_list: expr_list
   49              | /* empty */

   50 expr_next: TOKEN_COMMA expr_list
   51          | /* empty */

   52 expr_assign: mut init expr

   53 expr: expr_assign
   54     | expr2

   55 expr2: expr2 TOKEN_OR expr3
   56      | expr3

   57 expr3: expr3 TOKEN_AND expr4
   58      | expr4

   59 expr4: expr4 TOKEN_EQ expr5
   60      | expr4 TOKEN_NOT TOKEN_EQ expr5
   61      | expr5

   62 expr5: expr5 TOKEN_LT expr6
   63      | expr5 TOKEN_GT expr6
   64      | expr5 TOKEN_LEQ expr6
   65      | expr5 TOKEN_GEQ expr6
   66      | expr6

   67 expr6: expr6 TOKEN_ADD expr7
   68      | expr6 TOKEN_NEG expr7
   69      | expr7

   70 expr7: expr7 TOKEN_MULT expr8
   71      | expr7 TOKEN_DIV expr8
   72      | expr7 TOKEN_MOD expr8
   73      | expr8

   74 expr8: TOKEN_NOT val_literal
   75      | TOKEN_NEG val_literal
   76      | TOKEN_PLUS val_literal
   77      | expr8 TOKEN_EXP val_literal
   78      | val_literal

   79 val_literal: TOKEN_INT_LITERAL
   80            | inc_or_dec
   81            | TOKEN_CHAR_LITERAL
   82            | TOKEN_FLOAT_LITERAL
   83            | TOKEN_STRING_LITERAL
   84            | TOKEN_TRUE
   85            | TOKEN_FALSE
   86            | func_call
   87            | TOKEN_LPAREN expr TOKEN_RPAREN
   88            | mut

   89 inc_or_dec: ident_expr TOKEN_INC
   90           | ident_expr TOKEN_DEC

   91 ident: TOKEN_IDENT

   92 mut: ident_expr
   93    | ident_expr array_access

   94 ident_expr: ident

   95 array_access: TOKEN_LBRACKET expr TOKEN_RBRACKET array_access
   96             | TOKEN_LBRACKET expr TOKEN_RBRACKET

   97 array_type: TOKEN_ARRAY TOKEN_LBRACKET array_size TOKEN_RBRACKET all_types

   98 array_size: expr
   99           | /* empty */

  100 all_types: val_type
  101          | array_type

  102 val_type: TOKEN_INT
  103         | TOKEN_FLOAT
  104         | TOKEN_BOOL
  105         | TOKEN_CHAR
  106         | TOKEN_STR

  107 return_type: val_type
  108            | TOKEN_VOID

  109 param_list: ident TOKEN_DEFINE all_types param_next
  110           | /* empty */

  111 param_next: TOKEN_COMMA ident TOKEN_DEFINE all_types param_next
  112           | /* empty */

  113 init: TOKEN_ASSIGN


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INT (258) 102
TOKEN_PLUS (259) 76
TOKEN_MINUS (260)
TOKEN_MUL (261)
TOKEN_DIV (262) 71
TOKEN_LPAREN (263) 11 12 33 35 42 87
TOKEN_RPAREN (264) 11 12 33 35 42 87
TOKEN_SEMI (265)
TOKEN_ERROR (266)
TOKEN_EOF (267) 1 2
TOKEN_ARRAY (268) 97
TOKEN_AUTO (269)
TOKEN_BOOL (270) 104
TOKEN_CHAR (271) 105
TOKEN_ELSE (272) 28 30
TOKEN_FALSE (273) 85
TOKEN_FLOAT (274) 103
TOKEN_FOR (275) 34
TOKEN_FUNC (276) 11 12
TOKEN_IF (277) 33
TOKEN_PRINT (278) 23
TOKEN_RETURN (279) 21 22
TOKEN_STR (280) 106
TOKEN_TRUE (281) 84
TOKEN_VOID (282) 108
TOKEN_WHILE (283)
TOKEN_ASSIGN (284) 113
TOKEN_LBRACE (285) 9 12 19 43 45
TOKEN_RBRACE (286) 9 12 19 43 45
TOKEN_LBRACKET (287) 95 96 97
TOKEN_RBRACKET (288) 95 96 97
TOKEN_COMMA (289) 45 50 111
TOKEN_INC (290) 89
TOKEN_DEC (291) 90
TOKEN_ADD (292) 67
TOKEN_NEG (293) 68 75
TOKEN_MULT (294) 70
TOKEN_MOD (295) 72
TOKEN_EXP (296) 77
TOKEN_INEQ (297)
TOKEN_EQ (298) 59 60
TOKEN_NOT (299) 60 74
TOKEN_LT (300) 62
TOKEN_GT (301) 63
TOKEN_LEQ (302) 64
TOKEN_GEQ (303) 65
TOKEN_AND (304) 57
TOKEN_OR (305) 55
TOKEN_DEFINE (306) 7 8 9 10 11 12 109 111
TOKEN_SEMICOLON (307) 7 8 9 10 11 21 22 23 24 25 26 35 38 40
TOKEN_IDENT (308) 91
TOKEN_INT_LITERAL (309) 79
TOKEN_FLOAT_LITERAL (310) 82
TOKEN_STRING_LITERAL (311) 83
TOKEN_CHAR_LITERAL (312) 81
TOKEN_COMMENT (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1 2, on right: 0
decl_list (61)
    on left: 3 4, on right: 1 3
decl (62)
    on left: 5 6, on right: 3 4
var_decl (63)
    on left: 7 8 9 10, on right: 5 20
func_decl (64)
    on left: 11 12, on right: 6
stmt_list (65)
    on left: 13 14, on right: 12 19
stmt_next (66)
    on left: 15 16, on right: 13 15
stmt (67)
    on left: 17 18, on right: 13 15 27 28 41
simp_stmt (68)
    on left: 19 20 21 22 23 24 25 26, on right: 17 32
cmpd_stmt (69)
    on left: 27 28 29, on right: 18
if_dangle (70)
    on left: 30 31 32, on right: 28 30 39
if_expr (71)
    on left: 33, on right: 27 28 30
for_stmt (72)
    on left: 34, on right: 29 31
for_cond (73)
    on left: 35, on right: 34
for_expr (74)
    on left: 36 37, on right: 35
dangle_end (75)
    on left: 38 39, on right: 31
reg_end (76)
    on left: 40 41, on right: 29
func_call (77)
    on left: 42, on right: 26 86
array_init (78)
    on left: 43 44, on right: 9
array_init_next (79)
    on left: 45 46, on right: 43 45
expr_list (80)
    on left: 47, on right: 43 44 45 48 50
opt_expr_list (81)
    on left: 48 49, on right: 23 42
expr_next (82)
    on left: 50 51, on right: 47
expr_assign (83)
    on left: 52, on right: 25 53
expr (84)
    on left: 53 54, on right: 7 21 33 36 47 52 87 95 96 98
expr2 (85)
    on left: 55 56, on right: 54 55
expr3 (86)
    on left: 57 58, on right: 55 56 57
expr4 (87)
    on left: 59 60 61, on right: 57 58 59 60
expr5 (88)
    on left: 62 63 64 65 66, on right: 59 60 61 62 63 64 65
expr6 (89)
    on left: 67 68 69, on right: 62 63 64 65 66 67 68
expr7 (90)
    on left: 70 71 72 73, on right: 67 68 69 70 71 72
expr8 (91)
    on left: 74 75 76 77 78, on right: 70 71 72 73 77
val_literal (92)
    on left: 79 80 81 82 83 84 85 86 87 88, on right: 74 75 76 77 78
inc_or_dec (93)
    on left: 89 90, on right: 24 80
ident (94)
    on left: 91, on right: 7 8 9 10 11 12 94 109 111
mut (95)
    on left: 92 93, on right: 52 88
ident_expr (96)
    on left: 94, on right: 42 89 90 92 93
array_access (97)
    on left: 95 96, on right: 93 95
array_type (98)
    on left: 97, on right: 9 10 101
array_size (99)
    on left: 98 99, on right: 97
all_types (100)
    on left: 100 101, on right: 97 109 111
val_type (101)
    on left: 102 103 104 105 106, on right: 7 8 100 107
return_type (102)
    on left: 107 108, on right: 11 12
param_list (103)
    on left: 109 110, on right: 11 12
param_next (104)
    on left: 111 112, on right: 109 111
init (105)
    on left: 113, on right: 7 9 12 52


state 0

    0 $accept: . program $end

    TOKEN_EOF    shift, and go to state 1
    TOKEN_IDENT  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    var_decl   go to state 6
    func_decl  go to state 7
    ident      go to state 8


state 1

    2 program: TOKEN_EOF .

    $default  reduce using rule 2 (program)


state 2

   91 ident: TOKEN_IDENT .

    $default  reduce using rule 91 (ident)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: decl_list . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 10


state 5

    3 decl_list: decl . decl_list
    4          | decl .

    TOKEN_IDENT  shift, and go to state 2

    $default  reduce using rule 4 (decl_list)

    decl_list  go to state 11
    decl       go to state 5
    var_decl   go to state 6
    func_decl  go to state 7
    ident      go to state 8


state 6

    5 decl: var_decl .

    $default  reduce using rule 5 (decl)


state 7

    6 decl: func_decl .

    $default  reduce using rule 6 (decl)


state 8

    7 var_decl: ident . TOKEN_DEFINE val_type init expr TOKEN_SEMICOLON
    8         | ident . TOKEN_DEFINE val_type TOKEN_SEMICOLON
    9         | ident . TOKEN_DEFINE array_type init TOKEN_LBRACE array_init TOKEN_RBRACE TOKEN_SEMICOLON
   10         | ident . TOKEN_DEFINE array_type TOKEN_SEMICOLON
   11 func_decl: ident . TOKEN_DEFINE TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
   12          | ident . TOKEN_DEFINE TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN init TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_DEFINE  shift, and go to state 12


state 9

    0 $accept: program $end .

    $default  accept


state 10

    1 program: decl_list TOKEN_EOF .

    $default  reduce using rule 1 (program)


state 11

    3 decl_list: decl decl_list .

    $default  reduce using rule 3 (decl_list)


state 12

    7 var_decl: ident TOKEN_DEFINE . val_type init expr TOKEN_SEMICOLON
    8         | ident TOKEN_DEFINE . val_type TOKEN_SEMICOLON
    9         | ident TOKEN_DEFINE . array_type init TOKEN_LBRACE array_init TOKEN_RBRACE TOKEN_SEMICOLON
   10         | ident TOKEN_DEFINE . array_type TOKEN_SEMICOLON
   11 func_decl: ident TOKEN_DEFINE . TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
   12          | ident TOKEN_DEFINE . TOKEN_FUNC return_type TOKEN_LPAREN param_list TOKEN_RPAREN init TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_INT    shift, and go to state 13
    TOKEN_ARRAY  shift, and go to state 14
    TOKEN_BOOL   shift, and go to state 15
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_FLOAT  shift, and go to state 17
    TOKEN_FUNC   shift, and go to state 18
    TOKEN_STR    shift, and go to state 19

    array_type  go to state 20
    val_type    go to state 21


state 13

  102 val_type: TOKEN_INT .

    $default  reduce using rule 102 (val_type)


state 14

   97 array_type: TOKEN_ARRAY . TOKEN_LBRACKET array_size TOKEN_RBRACKET all_types

    TOKEN_LBRACKET  shift, and go to state 22


state 15

  104 val_type: TOKEN_BOOL .

    $default  reduce using rule 104 (val_type)


state 16

  105 val_type: TOKEN_CHAR .

    $default  reduce using rule 105 (val_type)


state 17

  103 val_type: TOKEN_FLOAT .

    $default  reduce using rule 103 (val_type)


state 18

   11 func_decl: ident TOKEN_DEFINE TOKEN_FUNC . return_type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
   12          | ident TOKEN_DEFINE TOKEN_FUNC . return_type TOKEN_LPAREN param_list TOKEN_RPAREN init TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_INT    shift, and go to state 13
    TOKEN_BOOL   shift, and go to state 15
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_FLOAT  shift, and go to state 17
    TOKEN_STR    shift, and go to state 19
    TOKEN_VOID   shift, and go to state 23

    val_type     go to state 24
    return_type  go to state 25


state 19

  106 val_type: TOKEN_STR .

    $default  reduce using rule 106 (val_type)


state 20

    9 var_decl: ident TOKEN_DEFINE array_type . init TOKEN_LBRACE array_init TOKEN_RBRACE TOKEN_SEMICOLON
   10         | ident TOKEN_DEFINE array_type . TOKEN_SEMICOLON

    TOKEN_ASSIGN     shift, and go to state 26
    TOKEN_SEMICOLON  shift, and go to state 27

    init  go to state 28


state 21

    7 var_decl: ident TOKEN_DEFINE val_type . init expr TOKEN_SEMICOLON
    8         | ident TOKEN_DEFINE val_type . TOKEN_SEMICOLON

    TOKEN_ASSIGN     shift, and go to state 26
    TOKEN_SEMICOLON  shift, and go to state 29

    init  go to state 30


state 22

   97 array_type: TOKEN_ARRAY TOKEN_LBRACKET . array_size TOKEN_RBRACKET all_types

    TOKEN_PLUS            shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_FALSE           shift, and go to state 33
    TOKEN_TRUE            shift, and go to state 34
    TOKEN_NEG             shift, and go to state 35
    TOKEN_NOT             shift, and go to state 36
    TOKEN_IDENT           shift, and go to state 2
    TOKEN_INT_LITERAL     shift, and go to state 37
    TOKEN_FLOAT_LITERAL   shift, and go to state 38
    TOKEN_STRING_LITERAL  shift, and go to state 39
    TOKEN_CHAR_LITERAL    shift, and go to state 40

    $default  reduce using rule 99 (array_size)

    func_call    go to state 41
    expr_assign  go to state 42
    expr         go to state 43
    expr2        go to state 44
    expr3        go to state 45
    expr4        go to state 46
    expr5        go to state 47
    expr6        go to state 48
    expr7        go to state 49
    expr8        go to state 50
    val_literal  go to state 51
    inc_or_dec   go to state 52
    ident        go to state 53
    mut          go to state 54
    ident_expr   go to state 55
    array_size   go to state 56


state 23

  108 return_type: TOKEN_VOID .

    $default  reduce using rule 108 (return_type)


state 24

  107 return_type: val_type .

    $default  reduce using rule 107 (return_type)


state 25

   11 func_decl: ident TOKEN_DEFINE TOKEN_FUNC return_type . TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
   12          | ident TOKEN_DEFINE TOKEN_FUNC return_type . TOKEN_LPAREN param_list TOKEN_RPAREN init TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_LPAREN  shift, and go to state 57


state 26

  113 init: TOKEN_ASSIGN .

    $default  reduce using rule 113 (init)


state 27

   10 var_decl: ident TOKEN_DEFINE array_type TOKEN_SEMICOLON .

    $default  reduce using rule 10 (var_decl)


state 28

    9 var_decl: ident TOKEN_DEFINE array_type init . TOKEN_LBRACE array_init TOKEN_RBRACE TOKEN_SEMICOLON

    TOKEN_LBRACE  shift, and go to state 58


state 29

    8 var_decl: ident TOKEN_DEFINE val_type TOKEN_SEMICOLON .

    $default  reduce using rule 8 (var_decl)


state 30

    7 var_decl: ident TOKEN_DEFINE val_type init . expr TOKEN_SEMICOLON

    TOKEN_PLUS            shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_FALSE           shift, and go to state 33
    TOKEN_TRUE            shift, and go to state 34
    TOKEN_NEG             shift, and go to state 35
    TOKEN_NOT             shift, and go to state 36
    TOKEN_IDENT           shift, and go to state 2
    TOKEN_INT_LITERAL     shift, and go to state 37
    TOKEN_FLOAT_LITERAL   shift, and go to state 38
    TOKEN_STRING_LITERAL  shift, and go to state 39
    TOKEN_CHAR_LITERAL    shift, and go to state 40
